fix: alignment of the tab separator

--- a/src/user-chrome/tabbar/_tab-separator.scss
+++ b/src/user-chrome/tabbar/_tab-separator.scss
@@ -9,8 +9,17 @@
     display: block !important;
     position: absolute !important;
     background-color: get-var("tab-separator-color") !important;
-    width: 1px !important;
-    height: 20px !important;
+    // Tab separator moved 1px left for chrome since it was mis-aligned
+    @media (-moz-pref("userChrome.ui-chrome-refresh")) {
+      width: 2px !important;
+      height: 16px !important;
+      left: -1px !important;
+    }
+    @media not (-moz-pref("userChrome.ui-chrome-refresh")) {
+      width: 1px !important;
+      height: 18px !important;
+      left: 0 !important;
+    }
     top: unset !important;
     transform: translateY(0%) !important;
     opacity: 0 !important;
